--- a/views/articles/thankyou.ejs
+++ b/views/articles/thankyou.ejs
@@ -1,5 +1,8 @@
 <%- include ("_header") %>
 <div class="container">
-	<h1>Thank you for the submition BITCH</h1>
+	<h1>
+		Thank you for the message, I will get back to you as soon as possible.
+		&#x1F604;
+	</h1>
 </div>
 <%- include ("_footer") %>
