--- a/public/css/index.css
+++ b/public/css/index.css
@@ -239,6 +239,11 @@ footer {
 	padding: 10px;
 }
 
+.article-body {
+	height: 200px;
+	padding: 20px;
+}
+
 /* Responsive */
 @media (max-width: 992px) {
 	* {
@@ -312,7 +317,13 @@ footer {
 
 @media (max-width: 770px) {
 	.work {
-		height: 350px;
+		height: 500px;
+	}
+}
+
+@media (max-width: 550px) {
+	.work {
+		height: 400px;
 	}
 }
 
